--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -1,97 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".QuestionActivity">
+<layout>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/ic_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
+        <import type="android.view.View"/>
+        <variable
+            name="questionViewModel"
+            type="com.chyngyz.quizapp.ui.question.QuestionViewModel" />
+    </data>
 
-    <LinearLayout
-        android:layout_width="280dp"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:context=".ui.question.QuestionActivity">
 
-        <TextView
-            android:id="@+id/question_title"
-            style="@style/title_style"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="Title"
-            android:textSize="17sp"
-            android:textStyle="bold" />
+            android:src="@drawable/ic_back"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.08"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="175dp"
-            android:layout_height="6dp"
-            android:layout_marginTop="29dp" />
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/progress_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            style="@style/text_style"
-            android:text="3/10" />
+            <TextView
+                android:id="@+id/question_title"
+                style="@style/title_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="Title"
+                android:textSize="17sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/question_text"
-            android:layout_width="213dp"
-            android:text="Questions"
-            android:layout_height="70dp"
-            android:layout_marginTop="31dp"
-            android:gravity="center_vertical|center_horizontal"/>
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="175dp"
+                android:layout_height="6dp"
+                android:layout_marginTop="29dp" />
 
-        <Button
-            android:id="@+id/q_btn1"
-            android:layout_marginTop="43dp"
-            android:layout_width="match_parent"
-            style="@style/btn_style"
-            android:layout_height="40dp"/>
-        <Button
-            android:id="@+id/q_btn2"
-            android:layout_marginTop="6dp"
-            android:layout_width="match_parent"
-            style="@style/btn_style"
-            android:layout_height="40dp"/>
-        <Button
-            android:id="@+id/q_btn3"
-            android:layout_marginTop="6dp"
-            android:layout_width="match_parent"
-            style="@style/btn_style"
-            android:layout_height="40dp"/>
-        <Button
-            android:id="@+id/q_btn4"
-            android:layout_marginTop="6dp"
-            android:layout_width="match_parent"
-            style="@style/btn_style"
-            android:layout_height="40dp"/>
+            <TextView
+                android:id="@+id/progress_result"
+                style="@style/text_style"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="5dp"
+                android:text="3/10" />
 
-        <Button
-            android:id="@+id/skip"
-            android:layout_marginTop="124dp"
-            android:text="skip"
-            style="@style/skip_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/quiz_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
 
-    </LinearLayout>
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/quiz_item" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/skip"
+                style="@style/skip_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="80dp"
+                android:text="skip"
+                app:cornerRadius="20dp" />
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
