--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -46,7 +46,7 @@
                 android:textStyle="bold" />
 
             <ProgressBar
-                android:id="@+id/progressBar"
+                android:id="@+id/progress_horizont_bar"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="175dp"
                 android:layout_height="6dp"
@@ -60,12 +60,18 @@
                 android:layout_marginHorizontal="5dp"
                 android:text="3/10" />
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="100dp"
+                android:visibility="visible"
+                android:layout_marginTop="100dp"
+                android:layout_height="100dp"/>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/quiz_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
-
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/quiz_item" />
 
