--- a/app/src/main/res/layout/quiz_item.xml
+++ b/app/src/main/res/layout/quiz_item.xml
@@ -2,7 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+
         <import type="android.view.View" />
+
         <variable
             name="question"
             type="com.chyngyz.quizapp.ui.models.Question" />
@@ -29,7 +31,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:visibility="@{question.type.equals(@string/multiple) ? View.VISIBLE : View.GONE}">
+            android:visibility="@{question.incorrect_answers.size() == 4  ? View.VISIBLE : View.GONE}">
 
 
             <Button
@@ -52,30 +54,41 @@
                 style="@style/btn_style"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:text="@{question.incorrect_answers.get(2)}" />
+                android:text='@{question.incorrect_answers.size() == 4 ? question.incorrect_answers.get(2) : "" }' />
 
             <Button
                 android:id="@+id/q_btn4"
                 style="@style/btn_style"
                 android:layout_width="match_parent"
-                android:layout_height="50dp" />
+                android:layout_height="50dp"
+                android:text='@{question.incorrect_answers.size() == 4 ? question.incorrect_answers.get(3) : "" }' />
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/question_btn_yes"
-            style="@style/btn_second_style"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="40dp"
-            android:backgroundTint="@color/white"/>
+            android:visibility="@{question.incorrect_answers.size() == 2  ? View.VISIBLE : View.GONE}"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/question_btn_no"
-            style="@style/btn_second_style"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="24dp"
-            android:backgroundTint="@color/white" />
+            <Button
+                android:id="@+id/question_btn_yes"
+                style="@style/btn_second_style"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="40dp"
+                android:backgroundTint="@color/white"
+                android:text="@{question.incorrect_answers.get(0)}" />
+
+            <Button
+                android:id="@+id/question_btn_no"
+                style="@style/btn_second_style"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="24dp"
+                android:backgroundTint="@color/white"
+                android:text="@{question.incorrect_answers.get(1)}" />
+        </LinearLayout>
+
     </LinearLayout>
 </layout>
