--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="main_fragment"
-            type="com.chyngyz.quizapp.ui.mainFragment.MainFragment" />
+            type="com.chyngyz.quizapp.ui.mainFragment.MainViewModel" />
     </data>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -104,7 +104,7 @@
                 <Spinner
                     android:id="@+id/spinner_category"
                     android:layout_width="240dp"
-                    android:spinnerMode="dialog"
+                    android:spinnerMode="dropdown"
                     android:layout_height="46dp"
                     android:layout_gravity="center" />
 
@@ -140,6 +140,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:orientation="vertical"
                 android:layout_marginTop="30dp"
                 android:elevation="40dp">
 
@@ -151,6 +152,12 @@
                     android:layout_gravity="center"
                     android:elevation="40dp"
                     android:text="Башталось!" />
+
+                <Button
+                    android:id="@+id/toHistory"
+                    android:layout_width="match_parent"
+                    android:text="toHistory"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
         </LinearLayout>
