--- a/app/src/main/res/layout/quiz_item.xml
+++ b/app/src/main/res/layout/quiz_item.xml
@@ -39,17 +39,21 @@
 
             <Button
                 android:id="@+id/q_btn1"
-                style="@style/btn_style"
+                style="@style/btn_second_style"
+                android:background="@drawable/btn_trassparent_style"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="40dp"
+                android:textColor="@color/blue"
                 android:text="@{question.incorrect_answers.get(0)}" />
 
             <Button
                 android:id="@+id/q_btn2"
                 style="@style/btn_style"
                 android:layout_width="match_parent"
+                android:textColor="@color/blue"
                 android:layout_height="50dp"
+                android:background="@drawable/btn_trassparent_style"
                 android:text="@{question.incorrect_answers.get(1)}" />
 
             <Button
@@ -57,6 +61,8 @@
                 style="@style/btn_style"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textColor="@color/blue"
+                android:background="@drawable/btn_trassparent_style"
                 android:text='@{question.incorrect_answers.size() == 4 ? question.incorrect_answers.get(2) : "" }' />
 
             <Button
@@ -64,6 +70,8 @@
                 style="@style/btn_style"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:textColor="@color/blue"
+                android:background="@drawable/btn_trassparent_style"
                 android:text='@{question.incorrect_answers.size() == 4 ? question.incorrect_answers.get(3) : "" }' />
 
         </LinearLayout>
@@ -80,7 +88,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="40dp"
+                android:textColor="@color/blue"
                 android:backgroundTint="@color/white"
+                android:background="@drawable/btn_trassparent_style"
                 android:text="@{question.incorrect_answers.get(0)}" />
 
             <Button
@@ -90,6 +100,8 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="24dp"
                 android:backgroundTint="@color/white"
+                android:textColor="@color/blue"
+                android:background="@drawable/btn_trassparent_style"
                 android:text="@{question.incorrect_answers.get(1)}" />
         </LinearLayout>
 
