--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -23,6 +23,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.08"
             app:layout_constraintStart_toStartOf="parent"
+            android:onClick="@{() -> questionViewModel.onBackImgClick()}"
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
@@ -76,15 +77,15 @@
                 tools:listitem="@layout/quiz_item" />
 
 
-            <com.google.android.material.button.MaterialButton
+            <Button
                 android:id="@+id/skip"
                 style="@style/skip_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@drawable/skip_btn_style"
                 android:layout_marginTop="80dp"
                 android:text="skip"
-                android:onClick="@{() -> questionViewModel.onSkip()}"
-                app:cornerRadius="20dp" />
+                android:onClick="@{() -> questionViewModel.onSkip()}"/>
 
         </LinearLayout>
 
