--- a/app/src/main/res/drawable/skip_btn_style.xml
+++ b/app/src/main/res/drawable/skip_btn_style.xml
@@ -15,7 +15,7 @@
 
         <path
             android:pathData="M0 0V40H90V0"
-            android:fillColor="#FF6581"
+            android:fillColor="@color/skip"
             />
 
     </group>
