--- a/app/src/main/res/drawable/back_color.xml
+++ b/app/src/main/res/drawable/back_color.xml
@@ -12,7 +12,7 @@
 
         <path
             android:pathData="M0 0V48H200V0"
-            android:fillColor="#FF4D4D" />
+            android:fillColor="@color/skip" />
 
     </group>
 
