--- a/app/src/main/res/drawable/back_true_back.xml
+++ b/app/src/main/res/drawable/back_true_back.xml
@@ -12,7 +12,7 @@
 
         <path
             android:pathData="M0 0V48H200V0"
-            android:fillColor="#2196F3" />
+            android:fillColor="@color/blue" />
 
     </group>
 
